--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,10 +1,12 @@
 .flip {
-  width: calc(33% - 48px);
-  height: 200px;
-  margin: 24px 24px 0 0;
-  padding: 0 12px;
+  // width: calc(33% - 48px);
+  width: 100%;
+  height: 224px;
+  // margin: 24px 0 0 0;
+  margin-bottom: 24px;
+  // padding: 24px 12px 0 12px;
   perspective: 1000px;
-  float: left;
+  // float: left;
   
   .flipInner {
     position: relative;
