--- a/src/components/Round/Round.module.scss
+++ b/src/components/Round/Round.module.scss
@@ -1,10 +1,21 @@
-.navigation {
-    width: 50%;
-    float: right;
+
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+
+.top {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0 $grid-gutter-width 12px;
+
+
+  .navigation {
     text-align: right;
-    margin-right: 24px;
-  
+
     button {
       margin-left: 12px;
     }
+
+    
   }
+}
