--- a/src/components/Title/Title.module.scss
+++ b/src/components/Title/Title.module.scss
@@ -1,4 +1,18 @@
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
+
 .base {
   font-size: 76px;
   font-weight: 300;
+  line-height: 1.2;
+  font-style: italic;
+  text-align: center;
+}
+
+@include media-breakpoint-up(lg) {
+  .base {
+    text-align: left;
+    word-spacing: 99999999px;
+  }
 }
