--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -2,15 +2,13 @@
   text-align: center;
 }
 
+.app {
+  font-family: 'Merriweather Sans', sans-serif;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -28,11 +26,8 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+:global {
+  body {
+    font-family: 'Merriweather Sans', sans-serif;
   }
 }
