--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,13 +1,9 @@
 .flip {
-  // width: calc(33% - 48px);
   width: 100%;
   height: 224px;
-  // margin: 24px 0 0 0;
   margin-bottom: 24px;
-  // padding: 24px 12px 0 12px;
   perspective: 1000px;
-  // float: left;
-  
+
   .flipInner {
     position: relative;
     width: 100%;
@@ -16,7 +12,8 @@
     transition: transform 0.8s;
     transform-style: preserve-3d;
 
-    .card, .cardBack {
+    .card,
+    .cardBack {
       position: absolute;
       width: 100%;
       height: 100%;
@@ -35,7 +32,7 @@
     }
 
     .card {
-      background-color: #777;
+      background-color: rgb(151, 122, 151);
       cursor: pointer;
       background-size: cover;
       border: none;
@@ -63,5 +60,3 @@
     transform: rotateY(180deg)
   }
 }
-
-
