--- a/src/components/Round/Round.module.scss
+++ b/src/components/Round/Round.module.scss
@@ -1,6 +1,6 @@
-
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
 
 .top {
   display: flex;
@@ -8,6 +8,9 @@
   justify-content: space-between;
   margin: 0 $grid-gutter-width 12px;
 
+  @include media-breakpoint-down(sm) {
+    flex-direction: column;
+  }
 
   .navigation {
     text-align: right;
@@ -16,6 +19,13 @@
       margin-left: 12px;
     }
 
-    
+    @include media-breakpoint-down(sm) {
+      display: flex;
+      justify-content: space-between;
+
+      button {
+        margin: 10px 0;
+      }
+    }
   }
 }
