--- a/src/components/Title/Title.module.scss
+++ b/src/components/Title/Title.module.scss
@@ -5,21 +5,23 @@
 .base {
   font-size: 76px;
   font-weight: 300;
-  line-height: 1.2;
+  line-height: 76px;
   font-style: italic;
   text-align: center;
-  text-decoration: none;
-  color: black;
+  font-family: 'Luckiest Guy', cursive;
+  margin: 10px 0;
 
-  &:hover {
-    text-decoration: underline;
-    color: black;
-  }
-}
 
-@include media-breakpoint-up(lg) {
-  .base {
-    text-align: left;
-    word-spacing: 99999999px;
+
+  .link {
+    text-decoration: none;
+    color: purple;
+    border-radius: 10px;
+    padding: 23px 20px 0px;
+
+    &:hover {
+      color: white;
+      background-color: purple;
+    }
   }
 }
